[gd_scene load_steps=4 format=3 uid="uid://b4dpjminsf4mx"]

[ext_resource type="Script" path="res://assets/scripts/worldRelated/worldScript/worldScript.gd" id="1_vjirs"]
[ext_resource type="PackedScene" path="res://GodotSky/GodotSky.tscn" id="2_v0sdl"]
[ext_resource type="PackedScene" uid="uid://dodu8jdt3nw06" path="res://assets/scenes/ui/GamePauseMenu.tscn" id="3_2mura"]

[node name="worldBase" type="Node"]
script = ExtResource("1_vjirs")

[node name="Spawns" type="Node" parent="."]

[node name="playerSpawns" type="Node" parent="Spawns"]

[node name="pawnSpawns" type="Node" parent="Spawns"]

[node name="Environment" type="Node" parent="."]

[node name="GodotSky" parent="Environment" instance=ExtResource("2_v0sdl")]

[node name="Geometry" type="Node3D" parent="."]

[node name="Pawns" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="Pawns"]

[node name="Props" type="Node3D" parent="."]

[node name="Misc" type="Node3D" parent="."]

[node name="Particles" type="Node3D" parent="Misc"]

[node name="WaypointNodes" type="Node3D" parent="Misc"]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Misc"]
_spawnable_scenes = PackedStringArray("res://assets/entities/camera/camera.tscn")
spawn_path = NodePath("../../Pawns/Players")

[node name="GamePauseMenu" parent="." instance=ExtResource("3_2mura")]
